fix: correct latest issues slider spacing & update button styling

--- a/app/globals.css
+++ b/app/globals.css
@@ -63,14 +63,14 @@
         @apply text-black
     }
 
-    .spinner {
+    .spinner-purple {
         width: 20px;
         height: 20px;
         position: relative;
     }
 
-    .spinner::before,
-    .spinner::after {
+    .spinner-purple::before,
+    .spinner-purple::after {
         content: "";
         width: 100%;
         height: 100%;
@@ -83,7 +83,31 @@
         animation: spin 1s linear infinite;
     }
 
-    .spinner::after {
+    .spinner-purple::after {
+        animation-delay: 0.5s;
+    }
+
+    .spinner-white {
+        width: 20px;
+        height: 20px;
+        position: relative;
+    }
+
+    .spinner-white::before,
+    .spinner-white::after {
+        content: "";
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border: 3px solid transparent;
+        border-top-color: #FFFFFF;
+        animation: spin 1s linear infinite;
+    }
+
+    .spinner-white::after {
         animation-delay: 0.5s;
     }
 
